문구 수정함.

--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -59,12 +59,12 @@ body {
     <input type="text" id="throwingNo" class="form-control"
         name="throwingNo" placeholder="10" required autofocus>
   </div>
-  <div class="submit-button centet">
+  <div class="submit-button centent">
     <button class="btn btn-primary" type="submit">투구 결과 입력</button>
     <a class="btn btn-warning" href="/" role="button">다시하기</a>
   </div>
 </form>
-  <h4 class="text-center"><게임 결과></h4>
+  <h4 class="text-center"><게임 점수></h4>
   <table class="table table-bordered">
     <thead>
       <th class="col-md-2 text-center">플레이어</th>
