--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -53,9 +53,10 @@ body {
 </head>
 <body>
 <div class="container">
+  {{#if isNotEnd}}
 <form class="form-show" method="post" action="/throw">
   <div class="form-show-div form-group">
-    <label for="throwingNo">pobi의 4 프레임 첫번째 시도</label>
+    <label for="throwingNo">{{currentPlayer}}의 {{currentFrameNo}} 프레임 첫번째 시도</label>
     <input type="text" id="throwingNo" class="form-control"
         name="throwingNo" placeholder="10" required autofocus>
   </div>
@@ -64,6 +65,7 @@ body {
     <a class="btn btn-warning" href="/" role="button">다시하기</a>
   </div>
 </form>
+  {{/if}}
   <h4 class="text-center"><게임 점수></h4>
   <table class="table table-bordered">
     <thead>
@@ -88,56 +90,19 @@ body {
 </thead>
 </thead>
     <tbody>
+    {{#frameResult}}
       <tr>
-        <th rowspan=2 class="text-center">pobi</th>
-        <td class="text-center">X</td>
-        <td class="text-center">8&nbsp;/</td>
-        <td class="text-center">7&nbsp;-</td>
-        <td class="text-center">X</td>
-        <td class="text-center">X</td>
-        <td class="text-center">X</td>
-        <td class="text-center">9&nbsp;/</td>
-        <td class="text-center">8&nbsp;-</td>
-        <td class="text-center">6&nbsp;3</td>
-        <td class="text-center">8&nbsp;/&nbsp;9</td>
+        <th rowspan=2 class="text-center">{{name}}</th>
+        {{#frameViews}}
+        <td class="text-center">{{this}}</td>
+        {{/frameViews}}
       </tr>
       <tr>
-        <td class="text-center">20</td>
-        <td class="text-center">37</td>
-        <td class="text-center">44</td>
-        <td class="text-center">74</td>
-        <td class="text-center">103</td>
-        <td class="text-center">123</td>
-        <td class="text-center">141</td>
-        <td class="text-center">149</td>
-        <td class="text-center">158</td>
-        <td class="text-center">177</td>
+        {{#scoreViews}}
+        <td class="text-center">{{this}}</td>
+        {{/scoreViews}}
       </tr>
-      <tr>
-        <th rowspan=2 class="text-center">jk</th>
-        <td class="text-center">X</td>
-        <td class="text-center">8&nbsp;/</td>
-        <td class="text-center">7&nbsp;-</td>
-        <td class="text-center">X</td>
-        <td class="text-center">X</td>
-        <td class="text-center">X</td>
-        <td class="text-center">9&nbsp;/</td>
-        <td class="text-center">8&nbsp;-</td>
-        <td class="text-center">6&nbsp;3</td>
-        <td class="text-center">8&nbsp;/&nbsp;9</td>
-      </tr>
-      <tr>
-        <td class="text-center">20</td>
-        <td class="text-center">37</td>
-        <td class="text-center">44</td>
-        <td class="text-center">74</td>
-        <td class="text-center">103</td>
-        <td class="text-center">123</td>
-        <td class="text-center">141</td>
-        <td class="text-center">149</td>
-        <td class="text-center">158</td>
-        <td class="text-center">177</td>
-      </tr>      
+    {{/frameResult}}
     </tbody>
   </table>
 </div>
