볼링 3단계-BowlingGame객체 추가, 웹화면 출력

--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -55,7 +55,7 @@ body {
 <div class="container">
 <form class="form-show" method="post" action="/throw">
   <div class="form-show-div form-group">
-    <label for="throwingNo">pobi의 4 프레임 첫번째 시도</label>
+    <label for="throwingNo">{{player}}의 {{currentFrameNumber}} 프레임 첫번째 시도</label>
     <input type="text" id="throwingNo" class="form-control"
         name="throwingNo" placeholder="10" required autofocus>
   </div>
@@ -88,56 +88,19 @@ body {
 </thead>
 </thead>
     <tbody>
+    {{#bowlingGames}}
       <tr>
-        <th rowspan=2 class="text-center">pobi</th>
-        <td class="text-center">X</td>
-        <td class="text-center">8&nbsp;/</td>
-        <td class="text-center">7&nbsp;-</td>
-        <td class="text-center">X</td>
-        <td class="text-center">X</td>
-        <td class="text-center">X</td>
-        <td class="text-center">9&nbsp;/</td>
-        <td class="text-center">8&nbsp;-</td>
-        <td class="text-center">6&nbsp;3</td>
-        <td class="text-center">8&nbsp;/&nbsp;9</td>
+        <th rowspan=2 class="text-center">{{playerName}}</th>
+        {{#frames}}
+        <td class="text-center">{{#pitches.list}}{{displayValue}} {{/pitches.list}}</td>
+        {{/frames}}
       </tr>
       <tr>
-        <td class="text-center">20</td>
-        <td class="text-center">37</td>
-        <td class="text-center">44</td>
-        <td class="text-center">74</td>
-        <td class="text-center">103</td>
-        <td class="text-center">123</td>
-        <td class="text-center">141</td>
-        <td class="text-center">149</td>
-        <td class="text-center">158</td>
-        <td class="text-center">177</td>
+        {{#frames}}
+        <td class="text-center">{{#if scoreFlag}}{{score}}{{/if}}</td>
+        {{/frames}}
       </tr>
-      <tr>
-        <th rowspan=2 class="text-center">jk</th>
-        <td class="text-center">X</td>
-        <td class="text-center">8&nbsp;/</td>
-        <td class="text-center">7&nbsp;-</td>
-        <td class="text-center">X</td>
-        <td class="text-center">X</td>
-        <td class="text-center">X</td>
-        <td class="text-center">9&nbsp;/</td>
-        <td class="text-center">8&nbsp;-</td>
-        <td class="text-center">6&nbsp;3</td>
-        <td class="text-center">8&nbsp;/&nbsp;9</td>
-      </tr>
-      <tr>
-        <td class="text-center">20</td>
-        <td class="text-center">37</td>
-        <td class="text-center">44</td>
-        <td class="text-center">74</td>
-        <td class="text-center">103</td>
-        <td class="text-center">123</td>
-        <td class="text-center">141</td>
-        <td class="text-center">149</td>
-        <td class="text-center">158</td>
-        <td class="text-center">177</td>
-      </tr>      
+    {{/bowlingGames}}
     </tbody>
   </table>
 </div>
