--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -55,7 +55,7 @@ body {
 <div class="container">
 <form class="form-show" method="post" action="/throw">
   <div class="form-show-div form-group">
-    <label for="throwingNo">{{player}}의 {{currentFrameNumber}} 프레임 첫번째 시도</label>
+    <label for="throwingNo">{{player}}의 {{nowFrameNumber}} 프레임 첫번째 시도</label>
     <input type="text" id="throwingNo" class="form-control"
         name="throwingNo" placeholder="10" required autofocus>
   </div>
