--- a/src/main/resources/templates/play.html
+++ b/src/main/resources/templates/play.html
@@ -55,7 +55,7 @@ body {
 <div class="container">
 <form class="form-show" method="post" action="/throw">
   <div class="form-show-div form-group">
-    <label for="throwingNo">{{player}}의 {{currentFrameNumber}} 프레임 첫번째 시도</label>
+    <label for="throwingNo">{{player}}의 {{nowFrameNumber}} 프레임 첫번째 시도</label>
     <input type="text" id="throwingNo" class="form-control"
         name="throwingNo" placeholder="10" required autofocus>
   </div>
@@ -91,14 +91,14 @@ body {
     {{#bowlingGames}}
       <tr>
         <th rowspan=2 class="text-center">{{playerName}}</th>
-        {{#frames}}
-        <td class="text-center">{{#pitches.list}}{{displayValue}} {{/pitches.list}}</td>
-        {{/frames}}
+        {{#frames.frames}}
+        <td class="text-center">{{displayStatus}}</td>
+        {{/frames.frames}}
       </tr>
       <tr>
-        {{#frames}}
-        <td class="text-center">{{#if scoreFlag}}{{score}}{{/if}}</td>
-        {{/frames}}
+        {{#frames.frames}}
+        <td class="text-center">{{#if score.scoreFlag}}{{score.score}}{{/if}}</td>
+        {{/frames.frames}}
       </tr>
     {{/bowlingGames}}
     </tbody>
